more CSS line height tweak

--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -4,6 +4,7 @@
 // stylelint-disable selector-no-qualifying-type, declaration-block-semicolon-newline-after,declaration-block-single-line-max-declarations, selector-no-type, selector-max-type
 
 code {
+  line-height: 1;
   padding: 0.0em 0.0em;
   font-weight: 400;
   background-color: $code-background-color;
