--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@ layout: table_wrappers
           {% endif %}
 
           {% if page.comments %}
-            {% include comments.html term={{page.comments}} %}
+            {% include comments.html term="{{ page.comments }}" %}
           {% endif %}
 
           {% if site.footer_content != nil %}
