--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@ layout: table_wrappers
           {% endif %}
 
           {% if page.auto_comments %}
-            {% include comments.html term="{{ page.auto_comments }}" %}
+            {% include comments.html term='{{ page.auto_comments }}' %}
           {% endif %}
 
           {% if site.footer_content != nil %}
