--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ layout: table_wrappers
 
 <!DOCTYPE html>
 
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ page.lang | default: site.lang }}">
 {% include head.html %}
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -42,6 +42,11 @@ layout: table_wrappers
               {% for link in site.aux_links %}
                 <li class="d-inline-block my-0{% unless forloop.last %} mr-2{% endunless %}"><a href="{{ link.last }}">{{ link.first }}</a></li>
               {% endfor %}
+              {% if page.lang == "ko" %}
+                <li class="d-inline-block my-0"><a href="{{ site.url }}{{ site.baseurl }}/">English</a></li>
+              {% else %}
+                <li class="d-inline-block my-0"><a href="{{ site.url }}{{ site.baseurl }}/ko">한국어</a></li>
+              {% endif %}
             </ul>
           {% endif %}
         </div>
